phase9: restore PATCH /files/rename endpoint and add docs
